# xx-crypto-cli

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  go.mod  go.sum
src/: cmd_helper.h  cmdp.c  cmdp.h  global.h  log.c  log.h  main.c  xcrypto.c  xcrypto.h  xx.c  xx_main.c  xx_run.c
src/cc/: asn1.c  asn1.h  cipher.c  cipher.h  dh.c  hash.c  hash.h  hex.c  hex.h  rand.c  rand.h  sm2.c  sm2.h  xcrypto.c
src/cc/format/: base64.c  base64.h  cformat.c  cformat.h  decoder.c  decoder.h  hex.c  hex.h  pem.c  pem.h
src/cc/random-check/: approximateEntropy.c  binaryDerivate.c  blockFrequency.c  bytesToBitSequence.c  cephes.c  cusum.c  dfft.c  discreteFourierTransform.c  erf.c  frequency.c  genutils.c  linearComplexity.c  longestRunOfOnes.c  matrix.c  matrix.h  nonOverlappingTemplateMatchings.c  overlappingTemplateMatchings.c  pokerDetect.c  randomExcursions.c  randomExcursionsVariant.c  rank.c  runs.c  runsDistribution.c  selfCorrelation.c  serial.c  universal.c
src/cmd/: c_main.c  cmd_helper.c  cmd_helper.h  io_helper.c  io_helper.h  opt_helper.c  opt_helper.h  sc_asn1.c  sc_base64.c  sc_chat.c  sc_data.c  sc_ecdhe.c  sc_echo.c  sc_gen.c  sc_hash.c  sc_hex.c  sc_pbkdf2.c  sc_print.c  sc_rand.c  sc_randcheck.c  sc_sm2.c  sc_sm2_dec.c  sc_sm2_enc.c  sc_sm2_keygen.c  sc_sm2_sign.c  sc_sm2_verify.c  sc_sm4.c
src/cmd/xsh/: sc_pwd.c
src/cross-platform/: string.h  unistd.c  unistd.h
src/data/: base64.c  base64.h  cdata.c  cdata.h  hex.c  hex.h  xarray.c  xarray.h  xbytes.c  xbytes.h
src/types/: xx_mem.c  xx_mem.h  xx_str.c  xx_str.h
src/utils/: console.c  console.h  convert.c  convert.h  converter.c  converter.h  log.c  log.h  string.c  string.h  terminal.c  terminal.h  unistd.c  unistd.h
src/xio/: xio.c  xio.h  xio_base64.c  xio_cipher.c  xio_f_base64.c  xio_f_hex.c  xio_f_pass.c  xio_file.c  xio_hex.c  xio_interface.c  xio_interface.h  xio_internal.h  xio_memory.c  xio_null.c  xio_pass.c  xio_s_file.c  xio_s_mbuilder.c  xio_s_memory.c  xio_s_null.c
test/: common.c  common.h  hex.c  main.c  t_xio.c  tc_app.c  tc_asn1.c  tc_chat.c  tc_hex.c  tc_pbkdf2.c  tc_rand.c  tc_sm2.c  utest.h
test/examples/: sm2key.openssl.pem
